# fastapi_session_auth

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  ipython_startup.py  pyproject.toml  readme.md  run.sh  setup.cfg
src/: dependencies.py  server.py
src/admin/: admin.py
src/config/: base.py
src/db/: db_deps.py  db_init.py
src/migrations/: env.py
src/migrations/versions/: f602777d772c_rename_user_table_to_app_user.py
src/my_apps/: base_crud.py  base_factories.py  base_schema.py  conftest.py  exceptions_handler.py
src/my_apps/app/: routers.py
src/my_apps/static/css/: styles.css
src/my_apps/static/js/: auth.js  dark_mode.js
src/my_apps/templates/: base.html
src/my_apps/templates/app/: app.html  submission_results.html
src/my_apps/templates/auth/: signin.html  signup.html
src/my_apps/templates/exceptions/: 403_forbidden.html
src/my_apps/users/: crud.py  models.py  schemas.py
src/my_apps/users/auth/: authentication.py  custom_types.py  exceptions.py  forms.py  passwords.py  routers.py
src/my_apps/users/tests/: conftest.py  factories.py  test_authentification.py  test_crud.py  test_routers.py  test_verify_password.py
